# onePieceCardGameParser

./: .gitignore  README.md  package-lock.json
.github/workflows/: new.yml  publish-nightly.yml  publish.yml  sync-images.yml
json/: index.d.ts  index.js  package.json
json/en/: cards-full.json  cards.json  filters.json
json/jp/: cards-full.json  cards.json  filters.json
parser/: Cargo.toml
parser/src/: main.rs
scripts/: package-lock.json  package.json  sync-images.ts  tsconfig.json
